@@ -1,14 +1,5 @@
 package com.ssapick.server.domain.pick.service;
 
-import java.time.LocalDate;
-import java.util.List;
-import java.util.Random;
-import java.util.stream.Collectors;
-
-import org.springframework.context.ApplicationEventPublisher;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import com.ssapick.server.domain.pick.entity.Hint;
 import com.ssapick.server.domain.pick.entity.HintOpen;
 import com.ssapick.server.domain.pick.entity.HintType;
@@ -17,9 +8,18 @@ import com.ssapick.server.domain.pick.repository.HintRepository;
 import com.ssapick.server.domain.pick.repository.PickRepository;
 import com.ssapick.server.domain.user.entity.PickcoLogType;
 import com.ssapick.server.domain.user.event.PickcoEvent;
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.context.ApplicationEventPublisher;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.time.LocalDate;
+import java.util.List;
+import java.util.Random;
+import java.util.stream.Collectors;
+
+import static com.ssapick.server.core.constants.PickConst.HINT_OPEN_COIN;
 
 @Slf4j
 @Service
@@ -47,10 +47,10 @@ public class HintService {
 		hints.removeIf(hint -> hint.getHintType().equals(HintType.GENDER));
 		hints.removeIf(hint -> hint.getHintType().equals(HintType.CAMPUS_NAME));
 		// test
-		hints.removeIf(hint -> hint.getHintType().equals(HintType.CAMPUS_SECTION));
-		hints.removeIf(hint -> hint.getHintType().equals(HintType.INTEREST));
-		hints.removeIf(hint -> hint.getHintType().equals(HintType.MAJOR));
-		hints.removeIf(hint -> hint.getHintType().equals(HintType.RESIDENTIAL_AREA));
+		// hints.removeIf(hint -> hint.getHintType().equals(HintType.CAMPUS_SECTION));
+		// hints.removeIf(hint -> hint.getHintType().equals(HintType.INTEREST));
+		// hints.removeIf(hint -> hint.getHintType().equals(HintType.MAJOR));
+		// hints.removeIf(hint -> hint.getHintType().equals(HintType.RESIDENTIAL_AREA));
 		//
 		List<Long> availableHints = getAvailableHintIds(pick, hints);
 
@@ -60,12 +60,6 @@ public class HintService {
 
 		Hint openHint = findHintById(hints, openHintId);
 
-		publisher.publishEvent(new PickcoEvent(
-			pick.getSender(),
-			PickcoLogType.HINT_OPEN,
-			-1
-		));
-
 		String hintContent = openHint.getContent();
 
 		switch (openHint.getHintType()) {
@@ -73,11 +67,11 @@ public class HintService {
 				hintContent = processNameHint(hintContent);
 			}
 			case AGE -> {
-				int birthYeaar = Integer.parseInt(hintContent.split("-")[0]);
-				int age = LocalDate.now().getYear() - birthYeaar + 1;
+				int birthYear = Integer.parseInt(hintContent.split("-")[0]);
+				int age = LocalDate.now().getYear() - birthYear + 1;
 				hintContent = age + "세";
 			}
-			case CHORT -> {
+			case COHORT -> {
 				hintContent = hintContent + "기";
 			}
 			case CAMPUS_NAME -> {
@@ -89,6 +83,9 @@ public class HintService {
 		}
 
 		addHintOpenToPick(pick, openHint, hintContent);
+
+		publisher.publishEvent(new PickcoEvent(
+				pick.getReceiver(), PickcoLogType.HINT_OPEN, HINT_OPEN_COIN));
 
 		return hintContent;
 	}
@@ -146,7 +143,7 @@ public class HintService {
 		List<Character> initials = name.substring(1).chars()
 			.mapToObj(c -> (char)c)
 			.map(this::getInitialConsonant)
-			.collect(Collectors.toList());
+			.toList();
 
 		int revealIndex = random.nextInt(initials.size());
 
